# PROXYGEN

./: README.md
proxygen/proxygen/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen/proxygen_control_gui/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
proxygen/proxygen_control_gui/include/proxygen_control_gui/: main_window.hpp  qnode.hpp
proxygen/proxygen_control_gui/launch/: proxygen_control_gui.launch
proxygen/proxygen_control_gui/src/: main.cpp  main_window.cpp  qnode.cpp
proxygen/proxygen_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen/proxygen_controller/include/proxygen_controller/: proxygen_controller.h
proxygen/proxygen_controller/launch/: proxygenr_controller.launch
proxygen/proxygen_controller/scripts/: create_udev_rules
proxygen/proxygen_controller/src/: proxygen_controller.cpp
proxygen/proxygen_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen/proxygen_description/launch/: proxygen_rviz.launch  proxygen_upload.launch
proxygen/proxygen_description/urdf/: gridbot.urdf.xacro  proxygen.gazebo.xacro  proxygen.transmission.xacro  proxygen.urdf.xacro  proxygen_robot.urdf.xacro
proxygen/proxygen_libs/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen/proxygen_libs/src/: custom_trajectory.cpp  dynamixel.cpp  kinematics.cpp  proxygen.cpp
proxygen/proxygen_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen/proxygen_teleop/include/proxygen_teleop/: proxygen_teleop_joystick.h  proxygen_teleop_keyboard.h
proxygen/proxygen_teleop/launch/: proxygen_teleop_joystick.launch  proxygen_teleop_keyboard.launch
proxygen/proxygen_teleop/src/: proxygen_teleop_joystick.cpp  proxygen_teleop_keyboard.cpp
proxygen_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen_msgs/msg/: OpenManipulatorState.msg
proxygen_simulations/proxygen_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
proxygen_simulations/proxygen_gazebo/config/: arm_controller.yaml  gripper_controller.yaml
proxygen_simulations/proxygen_gazebo/launch/: controller_utils.launch  proxygen_controller.launch  proxygen_gazebo.launch
proxygen_simulations/proxygen_gazebo/scripts/: amit.py  arm_class.py  goal_orientation.py  goal_point.py  joint_space_position.py  pick_and_place.py  send_serial.py
proxygen_simulations/proxygen_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
