<?xml version="1.0"?>
<package format="2">
  <name>proxygen_teleop</name>
  <version>2.0.2</version>
  <description>
    Provides teleoperation using keyboard for OpenManipulator.
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/proxygen_teleop</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/proxygen</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/proxygen/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>proxygen_msgs</depend>
</package>
