<?xml version="1.0"?>
<package format="2">
  <name>proxygen_simulations</name>
  <version>1.1.1</version>
  <description>
    Simulation packages for OpenManipulator
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/proxygen_simulations</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/proxygen_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/proxygen_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>proxygen_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
